# dataclass_from_json

./: .env.exemple  .gitignore  README.MD  build.py  main.py  pyproject.toml  requirements.txt  test.py  test_builds.py  test_runs.py  todo.txt
dataclass/: base_dataclass.py
dataclass/champions/: __init__.py  ability.py  champion.py  champions.py  stats.py  variable.py
dataclass/comps/: comp.py  comps.py  early.py  hextech_augment.py  positions.py
dataclass/items/: __init__.py  item.py  items.py
dataclass/live_game/: banned_champion.py  data.py  live_game.py  observers.py  participant.py  perks.py
dataclass/match/: __init__.py  ban.py  baron.py  challenges.py  champion.py  champion_stats.py  damage_stats.py  data.py  dragon.py  event.py  frame.py  info.py  inhibitor.py  match.py  metadata.py  objectives.py  participant.py  participant_frame.py  perks.py  position.py  riftHerald.py  rift_herald.py  selection.py  statPerks.py  stat_perks.py  style.py  team.py  (+3 more)
jsons/: bot.json  champions.json  comps.json  items.json  live_game.json  match.json  matchTimeline.json  test.json  traits.json
pickles/: matchTimeline.pickle
test_jsons/: challenges.json  champions.json  championsMasteries.json  dict_nested.json  dict_real.json  dict_simple.json  featuredMatches.json  gameModes.json  items.json  languages.json  list_obj.json  list_root_simple_obj.json  maps.json  match.json  matchTimeline.json  matches.json  profileIcons.json  regions.json  seasons.json  spectator.json  summoner.json  summonerSpells.json  versions.json
tests/: test_champions.py  test_match.py
(+41 files in other folders)
