[tool.poetry]
name = "dataclassesfromjson"
version = "0.1.0"
description = ""
authors = ["gabriel quesnot <gaqu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dacite = "^1.6.0"
StrEnum = "^0.4.8"
orjson = "^3.7.3"
ujson = "^5.3.0"
pydantic = "^1.9.1"
genson = "^1.2.2"
skinfer = "^0.2.0"
pdoc3 = "^0.10.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
pyment = "^0.3.3"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
