[tool.poetry]
name = "dataclassesfromjson"
version = "0.1.0"
description = ""
authors = ["gquesnot <gaqu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
StrEnum = "^0.4.8"
pydantic = "^1.9.1"
pytest = "^7.1.2"
python-decouple = "^3.6"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
